--- a/src/index.html
+++ b/src/index.html
@@ -5,47 +5,49 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
     <title>Земельные участки в Нижегородской области недорого</title>
-    <meta name="keywords" content="купить земельный участок в Нижнем Новгороде, купить земельный участок в Нижегородской области, купить участок в НН, купить земельный участок в НН недорого, купить земельный участок в Хмельной поляне, купить земельный участок в Новой Владимировке">
-    <meta name="description" content="Продажа земельных участков от собственника в Нижегородской области - DOMVLESUNN.RU">
+    <meta name="keywords"
+          content="купить земельный участок в Нижнем Новгороде, купить земельный участок в Нижегородской области, купить участок в НН, купить земельный участок в НН недорого, купить земельный участок в Хмельной поляне, купить земельный участок в Новой Владимировке">
+    <meta name="description"
+          content="Продажа земельных участков от собственника в Нижегородской области - DOMVLESUNN.RU">
 
     <link rel="stylesheet" href="/styles/main.css">
 
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <header>
-            <div class="navigation-btn">
-                <div class="navigation-btn__icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="navigation-btn__name">Меню</div>
+<div class="container">
+    <header>
+        <div class="navigation-btn hidden-lg">
+            <div class="navigation-btn__icon">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <div class="callback">Обратный звонок</div>
-            <div class="logo">
-                <div class="logo-img">
-                    <img src="/images/logo.png" alt="DOMVLESUNN">
-                </div>
-                <div class="logo-title">
-                    Domvlesunn
-                </div>
-            </div>
-            <div class="phone">
-                <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
-                <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
-            </div>
-        </header>
-        <div class="navigation">
-            <ul class="navigation-list">
-                <li><a href="#">Участки</a></li>
-                <li><a href="#">Цены</a></li>
-                <li><a href="#">Юридические гарантии</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>            
+            <div class="navigation-btn__name">Меню</div>
         </div>
+        <div class="logo">
+            <div class="logo-img">
+                <img src="/images/logo/logo.png" alt="DOMVLESUNN">
+            </div>
+            <div class="logo-title">
+                Domvlesunn
+            </div>
+            <div class="logo-description">
+                Красивые участки по низкой цене
+            </div>
+        </div>
+        <div class="phone">
+            <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
+            <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
+        </div>
+    </header>
+    <div class="navigation">
+        <ul class="navigation-list">
+            <li><a href="#">Участки</a></li>
+            <li><a href="#">Цены</a></li>
+            <li><a href="#">Юридические гарантии</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
     </div>
 </div>
 
