--- a/src/index.html
+++ b/src/index.html
@@ -14,42 +14,49 @@
 
 </head>
 <body>
-<div class="container">
-    <header>
-        <div class="navigation-btn hidden-lg">
-            <div class="navigation-btn__icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="navigation-btn__name">Меню</div>
-        </div>
-        <div class="logo">
-            <div class="logo-img">
-                <img src="/images/logo/logo.png" alt="DOMVLESUNN">
-            </div>
-            <div class="logo-title">
-                Domvlesunn
-            </div>
-            <div class="logo-description">
-                Красивые участки по низкой цене
-            </div>
-        </div>
-        <div class="phone">
-            <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
-            <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
-        </div>
-    </header>
-    <div class="navigation">
-        <ul class="navigation-list">
-            <li><a href="#">Участки</a></li>
-            <li><a href="#">Цены</a></li>
-            <li><a href="#">Юридические гарантии</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-    </div>
-</div>
+<section class="container">
+   <div class="row">
+       <header>
+           <div class="logo">
+               <div class="logo-img">
+                   <img src="/images/logo/logo2.png" alt="DOMVLESUNN">
+               </div>
+               <div class="logo-title">
+                   Domvlesunn
+               </div>
+               <div class="logo-description">
+                   Красивые участки по низкой цене
+               </div>
+           </div>
+           <nav class="navigation">
+               <ul class="navigation-list">
+                   <li><a href="#">Участки</a></li>
+                   <li><a href="#">Цены</a></li>
+                   <li><a href="#">Юридические гарантии</a></li>
+                   <li><a href="#">Новости</a></li>
+                   <li><a href="#">Контакты</a></li>
+               </ul>
+           </nav>
+           <div class="navigation-btn hidden-lg">
+               <div class="navigation-btn__icon">
+                   <span></span>
+                   <span></span>
+                   <span></span>
+               </div>
+               <div class="navigation-btn__name">Меню</div>
+           </div>
+           <div class="phone">
+               <div class="phone-callback">
+                   Заказать звонок
+               </div>
+               <div class="phone-numbers">
+                   <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
+                   <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
+               </div>
+           </div>
+       </header>
+   </div>
+</section>
 
 <script src="/libs/libs.js"></script>
 </body>
