--- a/src/index.html
+++ b/src/index.html
@@ -15,48 +15,59 @@
 </head>
 <body>
 <section class="container">
-   <div class="row">
-       <header>
-           <div class="logo">
-               <div class="logo-img">
-                   <img src="/images/logo/logo2.png" alt="DOMVLESUNN">
-               </div>
-               <div class="logo-title">
-                   Domvlesunn
-               </div>
-               <div class="logo-description">
-                   Красивые участки по низкой цене
-               </div>
-           </div>
-           <nav class="navigation">
-               <ul class="navigation-list">
-                   <li><a href="#">Участки</a></li>
-                   <li><a href="#">Цены</a></li>
-                   <li><a href="#">Юридические гарантии</a></li>
-                   <li><a href="#">Новости</a></li>
-                   <li><a href="#">Контакты</a></li>
-               </ul>
-           </nav>
-           <div class="navigation-btn hidden-lg">
-               <div class="navigation-btn__icon">
-                   <span></span>
-                   <span></span>
-                   <span></span>
-               </div>
-               <div class="navigation-btn__name">Меню</div>
-           </div>
-           <div class="phone">
-               <div class="phone-callback">
-                   Заказать звонок
-               </div>
-               <div class="phone-numbers">
-                   <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
-                   <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
-               </div>
-           </div>
-       </header>
-   </div>
+    <div class="row">
+        <header>
+            <div class="logo">
+                <div class="logo-img">
+                    <img src="/images/logo/logo2.png" alt="DOMVLESUNN">
+                </div>
+                <div class="logo-title">
+                    Domvlesunn
+                </div>
+                <div class="logo-description">
+                    Красивые участки по&nbsp;низкой цене
+                </div>
+            </div>
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li><a href="#">Участки</a></li>
+                    <li><a href="#">Цены</a></li>
+                    <li><a href="#">Юридические гарантии</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="navigation-btn hidden-lg">
+                <div class="navigation-btn__icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="navigation-btn__name">Меню</div>
+            </div>
+            <div class="phone">
+                <div class="phone-numbers">
+                    <a href="tel:+7 909 291 11 62" class="phone-number">+7 909 291 11 62</a>
+                    <a href="tel:+7 920 007 97 87 " class="phone-number">+7 920 007 97 87</a>
+                </div>
+                <div class="phone-callback">
+                    <span><svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13"><path fill="#96be0f" fill-rule="evenodd" d="M9.083 12a2.514 2.514 0 0 1-.843-.145 11.588 11.588 0 0 1-7.117-7.307 2.527 2.527 0 0 1 .87-2.786l.543-.413a1.72 1.72 0 0 1 2.57.582l.916 1.78a1.2 1.2 0 0 1-.184 1.362l-.19.208a.67.67 0 0 0-.1.76A3.245 3.245 0 0 0 6.95 7.447a.683.683 0 0 0 .76-.1l.21-.19a1.226 1.226 0 0 1 1.36-.187l1.783.916a1.715 1.715 0 0 1 .435 2.734l-.62.627A2.545 2.545 0 0 1 9.083 12z"></path></svg></span>
+                    <span>Заказать звонок</span>
+                </div>
+            </div>
+        </header>
+    </div>
 </section>
+<div class="wrapper-hero">
+    <section class="container">
+        <div class="row">
+            <div class="hero">
+
+            </div>
+        </div>
+    </section>
+</div>
+
 
 <script src="/libs/libs.js"></script>
 </body>
